--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <header>
-        <button class="btn btn-primary" id="budget">Añade tu prespuesto Semanal</button>
+        <button class="btn btn-primary" id="budget">Añade tu presupuesto Semanal</button>
       </header>
       <section>
         <div class="section-container">
